cleaned up code and fixed spacing on the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,18 @@
 .cards {
   float:left;
   width: 30%;
+  margin-top: 2%;
   border: solid black;
   border-width: 10px;
-  background-color: white;
+  background-color: rgb(230, 230, 230);
   margin-left: 10%;
   margin-right: 5%;
 }
 
 .projects {
-  text-align: center;
+  text-align: left;
+  padding: 10px;
+
 }
 
 .abt {
@@ -25,12 +28,12 @@
   margin-top: 4%;
 }
 
-a {
-  display: block;
+h2 {
+  text-align:center;
 }
 
 img {
-  width: 10%;
+  width: 20%;
   height: auto;
 }
 
